--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,29 +1,60 @@
-<h1>ТАБЛИЦА</h1>
-<div class="send-request">
-  <button nz-button nzType="primary" [disabled]="setOfCheckedId.size === 0" (click)="sendRequest()">
-    Отправить запрос
+<title>Конкурсы</title>
+
+<div>
+  <button
+    nz-button
+    nzType="primary"
+    [disabled]="setOfCheckedId.size !== 0"
+    [routerLink]="'konkurs/'"
+  >
+    Создать
   </button>
-  <span>Выбрано {{ setOfCheckedId.size }} Записей</span>
+  <button
+    nz-button
+    nzType="primary"
+    [disabled]="setOfCheckedId.size === 0"
+    (click)="sendRequest()"
+  >
+    Удалить
+  </button>
 </div>
-<nz-table #rowSelectionTable nzShowPagination nzShowSizeChanger [nzData]="listOfData"
-  (nzCurrentPageDataChange)="onCurrentPageDataChange($event)">
+
+<div>
+  <span>Выбранно {{ setOfCheckedId.size }} записей </span>
+</div>
+
+<nz-table
+  #rowSelectionTable
+  [nzData]="dataService.konkurses$ | async"
+  (nzCurrentPageDataChange)="onCurrentPageDataChange($event)"
+>
   <thead>
     <tr>
-      <th [nzChecked]="checked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
-      <th>Имя</th>
-      <th>Возраст</th>
-      <th>Телефон</th>
-      <th>Адрес</th>
+      <th
+        [nzSelections]="listOfSelection"
+        [(nzChecked)]="checked"
+        [nzIndeterminate]="indeterminate"
+        (nzCheckedChange)="onAllChecked($event)"
+      ></th>
+      <th>KONKURS_ID</th>
+      <th>KONKURS_NR</th>
+      <th>KONKURS_NAME</th>
     </tr>
   </thead>
+
   <tbody>
-    <tr *ngFor="let data of rowSelectionTable.data">
-      <td [nzChecked]="setOfCheckedId.has(data.id)" [nzDisabled]="data.disabled"
-        (nzCheckedChange)="onItemChecked(data.id, $event)"></td>
-      <td>{{ data.name }}</td>
-      <td>{{ data.age }}</td>
-      <td>{{ data.telefon }}</td>
-      <td>{{ data.address }}</td>
+    <tr
+      *ngFor="let konkurs of rowSelectionTable.data"
+      class="table-row"
+      [routerLink]="'konkurs/' + konkurs.konkursId"
+    >
+      <td
+        [nzChecked]="setOfCheckedId.has(konkurs.id)"
+        (nzCheckedChange)="onItemChecked(konkurs.id, $event)"
+      ></td>
+      <td>{{ konkurs.konkursId }}</td>
+      <td>{{ konkurs.konkursNr }}</td>
+      <td>{{ konkurs.konkursName }}</td>
     </tr>
   </tbody>
 </nz-table>
